test-gatway-tls-passthrough/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - test.example.com
  - port:
      number: 9300
      name: ncat
      protocol: TLS
    tls:
      mode: PASSTHROUGH
    hosts:
    - ncat.example.com
    - ncat-0.example.com
    - ncat-1.example.com
