test-gatway-tls-passthrough/vs-test-example.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: test-example
  namespace: default
spec:
  hosts:
  - test.example.com
  gateways:
  - istio-system/gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: httpbin
